--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+# mysql ??
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/jpa?serverTimezone=UTC&characterEncoding=UTF-8
+
+# ???
+spring.datasource.username=root
+spring.datasource.password=1234
+
+# hibernate ??
+spring.jpa.hibernate.ddl-auto=create
