--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=1234
 
 # hibernate ??
 spring.jpa.hibernate.ddl-auto=update
+
+jwt.secret.key = "daasfaa_ASDASFASVXZczx+"
