#40 <feat> <(verified)> : 휴대폰 인증을 위한 네이버 클라우드 연결

--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,10 @@ dependencies {
     // https://mvnrepository.com/artifact/com.github.ulisesbocchio/jasypt-spring-boot-starter
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'
 
-    // sms 인증
-    // https://mvnrepository.com/artifact/net.nurigo/javaSDK
-    implementation 'net.nurigo:javaSDK:2.2'
+//    // sms 인증
+//    // https://mvnrepository.com/artifact/net.nurigo/javaSDK
+//    implementation 'net.nurigo:javaSDK:2.2'
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
 
 
     compileOnly 'org.projectlombok:lombok'
