--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,11 @@ dependencies {
 //    // https://mvnrepository.com/artifact/net.nurigo/javaSDK
 //    implementation 'net.nurigo:javaSDK:2.2'
     implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+    implementation 'org.apache.httpcomponents.client5:httpclient5'
+
+    // redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 
 
     compileOnly 'org.projectlombok:lombok'
