#50 <feat> <image> : 네이버 클라우드 플렛폼을 사용하여 이미지 업로드 구현

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,10 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
     implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.2'
 
+    // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.530'
+
+
 
 
     compileOnly 'org.projectlombok:lombok'
